syntax = "proto3";
package notification;
import "google/protobuf/wrappers.proto";

service NotificationService {
  rpc GetUserNotifications (GetUserNotificationsRequest) returns (GetUserNotificationsResponse);
  rpc GetGroupMembers (GetGroupMembersRequest) returns (GetGroupMembersResponse);
  rpc GetGroupNotifications (GetGroupNotificationsRequest) returns (GetGroupNotificationsResponse);
  
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
  rpc SendGroupNotification (SendGroupNotificationRequest) returns (SendGroupNotificationResponse);
  rpc AddGroupMember (GroupMemberRequest) returns (AddGroupMemberResponse);
  rpc CreateGroup (CreateGroupRequest) returns (CreateGroupResponse);
  rpc RemoveGroupMember (GroupMemberRequest) returns (RemoveGroupMemberResponse);
  rpc SleepNotification (SleepNotificationRequest) returns (SleepNotificationResponse);

  rpc SubscribeToUserNotifications (UserRequest) returns (stream Notification);
  rpc SubscribeToGroupNotifications (GroupNotificationsRequest) returns (stream Notification);
}

message GetUserNotificationsRequest {
  string user = 1;
  bool sleep = 2;
}

message GetGroupMembersRequest {
  string group_name = 1;
}

message GetGroupNotificationsRequest {
  string group_name = 1;
  repeated string tags = 2;
}

message SendNotificationRequest {
  string to_user = 1;
  string from_user = 2;
  string payload = 3;
  TTLOptions ttl = 4;
}

message SendGroupNotificationRequest {
  string group_name = 1;
  string from_user = 2;
  string payload = 3;
  repeated string tags = 4;
  TTLOptions ttl = 5;
}

message GroupMemberRequest {
  string user = 1;
  string group_name = 2;
}

message CreateGroupRequest {
  string group_name = 1;
  repeated string users = 2;
}

message SleepNotificationRequest {
  string notification_id = 1;
  bool sleep = 2;
}

message UserRequest {
  string user = 1;
}

message GroupNotificationsRequest {
  string group_name = 1;
  repeated string tags = 2;
}

message GetUserNotificationsResponse {
  repeated Notification notifications = 1;
}

message GetGroupMembersResponse {
  repeated string users = 1;
}

message GetGroupNotificationsResponse {
  repeated Notification notifications = 1;
}

message SendNotificationResponse {
  bool result = 1;
}

message SendGroupNotificationResponse {
  bool result = 1;
}

message AddGroupMemberResponse {
  bool result = 1;
}

message CreateGroupResponse {
  bool result = 1;
}

message RemoveGroupMemberResponse {
  bool result = 1;
}

message SleepNotificationResponse {
  bool result = 1;
}

message Notification {
  string id = 1 [json_name = "_id"];
  google.protobuf.StringValue user = 2;
  string from_user = 3;
  google.protobuf.StringValue group_name = 4;
  string payload = 5;
  bool sleep = 6;
  repeated string tags = 7;
  google.protobuf.DoubleValue expire_at = 8;
  string created_at = 9;
}

message TTLOptions {
  google.protobuf.Int32Value mins = 1;
  google.protobuf.Int32Value hours = 2;
  google.protobuf.Int32Value days = 3;
}

message UserGroup {
  repeated string users = 1;
}